# VendorIntelligence

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  pyrightconfig.json  requirements.txt
app/: config.py  db.py  main.py  models.py  schemas.py
app/llm/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
app/pipeline/: analysis.py  browser.py  discovery.py  extraction.py  fetcher.py  insights.py  ranking.py  runner.py  selection.py
app/routes/: insights.py  pages.py  reports.py  runs.py  vendors.py
app/templates/: _reports_table.html  _run_progress.html  _vendor_list.html  _vendor_row.html  base.html  home.html  insights.html  report.html  reports.html  run.html
app/workers/: runner.py
