[project]
name = "vendor-intel"
version = "0.1.0"
description = "Vendor intelligence reports for SaaS procurement — scrapes public posture data and produces CFO-grade reports."
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.136,<0.137",
    "sqlalchemy>=2.0.49,<2.1",
    "aiosqlite>=0.22,<0.23",
    "pydantic-settings>=2.14,<3",
    "curl-cffi>=0.15,<0.16",
    "playwright>=1.59,<2",
    "beautifulsoup4>=4.14,<5",
    "openai>=2.34,<3",
    "anthropic>=0.99,<1",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
